tests/negative/typechecker_bad18.sp
a: Void () {
  a: Int = 0;
  a: Double = 1;
}

main: Int() {
  return 0;
}